# uma

./: .gitignore  celery_daemon.conf.example  nohup.out  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack-stats.json  webpack.config.js
apps/about/: admin.py  apps.py  models.py  urls.py  views.py
apps/account/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
apps/api/: __init__.py  lookups.py  models.py  serializers.py  urls.py  views.py
apps/bulletin/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
apps/bulletin_new/: apps.py  models.py  urls.py  utils.py  views.py
apps/classifiers/: admin.py  apps.py  models.py  services.py
apps/contacts/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/favorites/: tasks.py  urls.py  views.py
apps/help/: admin.py  apps.py  models.py  urls.py  views.py
apps/home/: urls.py  views.py
apps/my_auth/: admin.py  apps.py  backends.py  forms.py  models.py  services.py  urls.py  utils.py  (+1 more)
certs/: CA-03F0.cer  CA-0D84EDA1BB9381E804000000647F2B002D4AA400.cer  CA-0D84EDA1BB9381E804000000647F2B002E4AA400.cer  CA-20B4E4ED0D30998C020000000100000005000000.cer  CA-20B4E4ED0D30998C020000000100000006000000.cer  DFS.OTRIMANO (2014) - 1.cer
proxy_handler/: ProxyHandlerCURL.php
selection_templates/: template.docx
templates/: base.html
templatetags/: uma_extras.py
tests/: tests_utils.py
uma/: abstract_models.py  celery.py  db_routers.py  middleware.py  settings.py.example  storages.py  urls.py  utils.py
(+518 files in other folders)
