[tool.poetry]
name = "uma"
version = "0.1.0"
description = ""
authors = ["Olexandr Monastyretskyi <alex.mon1989@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
Django = "<4"
celery = "^5.2.3"
django-celery-results = "2.2.0"
django-celery-email = "^3.0.0"
djangorestframework = "^3.13.1"
Pillow = "^9.0.1"
elasticsearch-dsl = "6.4.0"
django-celery-beat = "^2.2.1"
django-debug-toolbar = "^3.2.4"
django-ckeditor = "^6.2.0"
django-annoying = "^0.10.6"
mssql-django = "^1.1.2"
singlemodeladmin = "^0.9"
python-docx = "^0.8.11"
XlsxWriter = "^3.0.3"
six = "^1.16.0"
requests = "^2.27.1"
gunicorn = "^20.1.0"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
